// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`the YoastButton executes callback 1`] = `
<button
  className="sc-bwzfXH gyLiXM sc-bdVaJa exAxcS"
  onClick={[Function]}
  type="button"
>
  <span>
    ButtonValue
  </span>
</button>
`;

exports[`the YoastButton executes callback 2`] = `
<button
  className="sc-bwzfXH gyLiXM sc-bdVaJa exAxcS"
  onClick={[Function]}
  type="button"
>
  <span>
    ButtonValue
  </span>
</button>
`;

exports[`the YoastButton matches the snapshot 1`] = `
<button
  className="sc-bwzfXH gyLiXM sc-bdVaJa dNRIPk"
  onClick={undefined}
  type="button"
>
  <span>
    ButtonValue
  </span>
</button>
`;
